# spinner-wheel

./: .gitignore  LICENSE  MANIFEST.in  namebox.py  pyproject.toml  readme.md  wheel.py
spinner_wheel_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
