[build-system]
requires = ["setuptools>61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spinner-wheel-app"
version = "0.1.0"
authors = [
    { name="Sahas", email="sahas@shimpi.dev"},
]
description = "Spinner wheel is an interactive python app for running wheels offline (first time has to be online though). Built with the Tkinter module in Python."
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # nothing... literally nothing
]

[tool.setuptools]
py-modules = ["namebox", "wheel"]

[project.scripts]
spinner-wheel = "namebox:main"